examples/c/error-codes/undefined/UB-TDG3-bad-static.output
UB-TDG3-bad-static.c:4:2: error: function declared in block scope cannot have 'static' storage class
 static int f();
 ^
1 error generated.
